# tasbot_eyes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  animation_stack.c  animation_stack.h  arguments.c  arguments.h  color.c  color.h  filesystem.c  filesystem.h  gif.c  gif.h  led.c  led.h  main.c  network.c  network.h  palette.c  palette.h  stack.c  stack.h  tasbot.c  tasbot.h  utils.c  utils.h
misc/: colorchord.conf
